--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
                         <h1>Агентство<br> недвижимости</h1>
                     </div>
                     <div class="menu">
-                        <a href="./home.html">Главная</a>
+                        <a href="./index.html">Главная</a>
                         <a href="./service.html">Услуги</a>
                         <a href="#">Отзывы</a>
                         <a href="./price.html">Расценки</a>
@@ -37,7 +37,7 @@
                 </div>
         
                 <div class="bg_menu-list">
-                    <a href="./home.html">Главная</a>
+                    <a href="./index.html">Главная</a>
                     <a href="./service.html">Услуги</a>
                     <a href="#">Отзывы</a>
                     <a href="./price.html">Расценки</a>
@@ -108,7 +108,7 @@
     <footer>
         <div class="container">
             <div class="footer__menu">
-                <a href="./home.html">Главная</a>
+                <a href="./index.html">Главная</a>
                 <a href="./service.html">Услуги</a>
                 <a href="#">Отзывы</a>
                 <a href="./price.html">Расценки</a>
